Add new updates

--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
 <body>
     <div class="container">
         <h1>PDF Download</h1>
-        <a href="./Passports_Sudhanshu.pdf" download="your-file.pdf" class="download-btn">
+        <a href="./Passports_Sudhanshu.pdf" download="passport.pdf" class="download-btn">
             Download PDF
         </a>
         <div class="info">
-            Click the button above to download your PDF file
         </div>
     </div>
 </body>
